# python-pytest-container

./: README.md
.devcontainer/: devcontainer.json  setup.sh
project/: pyproject.toml
project/src/training/: main.py
project/tests/: sample_test.py
