[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Daniel Naylor <daniel.naylor@opencastsoftware.com>"]
readme = "README.md"
packages = [{include = "project", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
pythonpath = [
    "src"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

